--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script src="axd/ScriptResource9.axd" type="text/javascript"></script>
 <div class="aspNetHidden">
 
-	<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAAVi0QMUI+AHslfwI71RBiWHbKLNwbYANwDCNUgrN8heQS2ojuAOjHflzkfDb8gotwaEIZDhD2NWlXzYv44q2j/2AmUsjjKmD1z+TsHKlgLSucj06t4uYPmruYDIBw8qhYo+8vHQ" />
+	<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="" />
 </div>
 
         <div id="skip">
@@ -773,7 +773,7 @@ Sys.WebForms.PageRequestManager._initialize('ScriptManager1', 'ctl05', [], [], [
       <div class="span12">
         <div class="tech-cloud-1"></div>
         <h3 class="yellowText">At FFI, we make exceptional connections every day.</h3>
-        <p class="copy-neosans-reg16">We use our insight, knowledge and global resources to make exceptional connections every day. With 70 branch offices located strategically throughout North America, we are positioned perfectly to deliver the industry's top talent to each of our clients. </p>
+        <p class="copy-neosans-reg16">We use our insight, knowledge and global resources to make exceptional connections every day. With $ branch offices located strategically throughout India, we are positioned perfectly to deliver the industry's top talent to each of our clients. </p>
         <a href="#" title="Learn more about FFI" class="btnLearnMore">Learn more about FFI</a></div>
     </div>
   </div>
