--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                             <div class="detail-table-piechart" id="break-down-section">
                                 <div class="rows-left">
                                     <div class="colmn1"> <span class="arange-squre"></span>Loan Amount Eligibility</div>
-                                    <div class="colmn2"><span id="pieLoanAmount">_____</span><span><img data-original="https://cdn3.bankbazaar.com/images/tools/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
+                                    <div class="colmn2"><span id="pieLoanAmount">_____</span><span><img data-original="https://github.com/zukepage/zukepage.github.io/blob/master/images/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
 </span></div>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="rows-left">
                                     <div class="colmn1"> <span class="green-squre"></span>Monthly Repayment</div>
-                                    <div class="colmn2"><span id="pieInterestPay">_____</span><span><img data-original="https://cdn3.bankbazaar.com/images/tools/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
+                                    <div class="colmn2"><span id="pieInterestPay">_____</span><span><img data-original="https://github.com/zukepage/zukepage.github.io/blob/master/images/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
 </span></div>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="rows-left">
                                     <div class="colmn1"> <span class="red-squre"></span>Total Interest Payable</div>
-                                    <div class="colmn2"><span id="pieProcessFee">_____</span><span><img data-original="https://cdn3.bankbazaar.com/images/tools/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
+                                    <div class="colmn2"><span id="pieProcessFee">_____</span><span><img data-original="https://github.com/zukepage/zukepage.github.io/blob/master/images/rupee-icon-black.png" src="" class="lazy" alt="Rupee image"/>
 </span></div>
                                     <div class="clearfix"></div>
                                 </div>
