--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <center><h2>or</h2></center>
+        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
