--- a/index2.html
+++ b/index2.html
@@ -38,11 +38,11 @@
     
 <div class="emi-head">
         <div class="container">
-            <div class="section-title"><h1>Home Loan Eligibility Calculator</h1></div><div class="pull-right"><p>Log-out icon on a button:
+            <div class="section-title"><h1>Home Loan Eligibility Calculator</h1><div class="pull-right"><p>Log-out icon on a button:
         <button type="button" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-log-out"></span> Log out
         </button>
-      </p></div>
+      </p></div></div>
             <div class="clearfix"></div>
         </div>
     </div>
