--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
 
 <header>
     
-    <div class="pull-right" style="float:right;"><p style="color:white;">Log-out icon on a button:
+    <div class="pull-right" style="float:right;"><p style="color:black;margin:10px;">
         <button type="button" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-log-out"></span> Log out
         </button>
