--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
     console.log(response);
-    console.log(JSON.stringify(response));
+    
     // The response object is returned with a status field that lets the
     // app know the current login status of the person.
     // Full docs on the response object can be found in the documentation
@@ -124,11 +124,16 @@
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
+      var data = JSON.stringify(response);
+      alert (data);
+      window.location="http://zukepage.github.io";
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
     });
   }
+
+  
 </script>
 
 <script>
