--- a/index2.html
+++ b/index2.html
@@ -31,9 +31,9 @@
 
 <header>
     
-    <div class="pull-right" style="float:right;"><span id="userid" style="color:black;"></span><p style="color:black;margin:10px;">
+    <div class="pull-right" style="float:right;"><p style="color:black;margin:10px;">
         <button type="button" class="btn btn-default btn-sm" onclick="FB.logout(); Redirect();">
-          <span class="glyphicon glyphicon-log-out"></span> Log out
+          <span id="userid" style="color:white; font-weight:bold;"></span><span class="glyphicon glyphicon-log-out"></span> Log out
         </button>
       </p></div>
 </header>
