--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <center><h2>or</h2></center>
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+        <a class="btn btn-block btn-social btn-facebook" scope="public_profile,email" onlogin="checkLoginState();">
+            <span class="fa fa-facebook"></span> Sign in with Facebook
+          </a>
+       <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>-->
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
