--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <center><h2>or</h2></center>
         <a class="btn btn-block btn-social btn-facebook" scope="public_profile,email" onlogin="checkLoginState();">
-            <span class="fa fa-facebook"></span> Sign in with Facebook
+            <i class="fa fa-facebook"></i> Sign in with Facebook
           </a>
        <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>-->
