--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <center><h2>or</h2></center>
         <center>
-       <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" >
+       <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="width:12em;height:5em; font-size:15px;">
 </fb:login-button></center>
         <div class="checkbox">
           <label>
