--- a/index3.html
+++ b/index3.html
@@ -515,12 +515,12 @@ $(".car-hover").hover(
 </div>-->
 <nav class="social">
           <ul>
-              <li><a href="https://www.facebook.com/GrpDiscount" target="_blank"><img src="../public/front/images/fb2.png" /></a></li>
-              <li><a href="https://plus.google.com/112625436276907168336/posts" target="_blank"><img src="../public/front/images/g+.png" /></a></li>
-              <li><a href="http://in.linkedin.com/in/grpdiscount" target="_blank"><img src="../public/front/images/in1.png" /></a></li>
-              <li><a href="https://twitter.com/grpdiscount" target="_blank"><img src="../public/front/images/tw1.png" /></a></li>
+              <li><a href="https://www.facebook.com/GrpDiscount" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/fb2.png" /></a></li>
+              <li><a href="https://plus.google.com/112625436276907168336/posts" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/g+.png" /></a></li>
+              <li><a href="http://in.linkedin.com/in/grpdiscount" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/in1.png" /></a></li>
+              <li><a href="https://twitter.com/grpdiscount" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/tw1.png" /></a></li>
               <li><a href="mailto:support@grpdiscount.com?subject=Grp Discount&body=www.grpdiscount.com/index.php"><img src="../public/front/images/mail1.png" /></a></li>
-<li><a href="https://in.pinterest.com/grpdiscount/" target="_blank"><img src="../public/front/images/pin1.png" /></a></li>
+<li><a href="https://in.pinterest.com/grpdiscount/" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/pin1.png" /></a></li>
           </ul>
       </nav><div id="slider1_container" style="margin: 0px auto !important;position: relative; top: 10px;bottom:10px; left: 0px; width: 980px; height: 100px; overflow: hidden; ">
 <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 980px; height: 100px; overflow: hidden;">            
