--- a/index3.html
+++ b/index3.html
@@ -519,7 +519,7 @@ $(".car-hover").hover(
               <li><a href="https://plus.google.com/112625436276907168336/posts" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/g+.png" /></a></li>
               <li><a href="http://in.linkedin.com/in/grpdiscount" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/in1.png" /></a></li>
               <li><a href="https://twitter.com/grpdiscount" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/tw1.png" /></a></li>
-              <li><a href="mailto:support@grpdiscount.com?subject=Grp Discount&body=www.grpdiscount.com/index.php"><img src="../public/front/images/mail1.png" /></a></li>
+              <li><a href="mailto:support@grpdiscount.com?subject=Grp Discount&body=www.grpdiscount.com/index.php"><img src="http://www.grpdiscount.com/public/front/images/mail1.png" /></a></li>
 <li><a href="https://in.pinterest.com/grpdiscount/" target="_blank"><img src="http://www.grpdiscount.com/public/front/images/pin1.png" /></a></li>
           </ul>
       </nav><div id="slider1_container" style="margin: 0px auto !important;position: relative; top: 10px;bottom:10px; left: 0px; width: 980px; height: 100px; overflow: hidden; ">
