--- a/calcfresh.html
+++ b/calcfresh.html
@@ -483,7 +483,7 @@ $(".car-hover").hover(
                             <svg id="svg" style="font-size:15px"></svg>-->
                             <div id="pieChart" class="chart"></div>
                             </center>
-                        <form class="form-inline form-horizontal"  >
+                        <form class="form-inline form-horizontal" style="margin:10px;" >
                         <div class="pie-chart-details">
                             <div class="detail-table-piechart" id="break-down-section">
 
