--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ $(function () {
                 <div class="modal-body">
                      <center> <ul class="unstyled list-unstyled">
                 <li><span class="icon-font-grey-size36"><i class="fa fa-calculator fa-4"></i></span><small><p>Loan Eligibility Calculator</p></small></li>
-                <li><a href="#" <i class="sd-icon sd-icon-like-outline color-grey"></i></a>
+                <li><a href="calcfresh.html" <i class="sd-icon sd-icon-like-outline color-grey"></i></a>
                 </li>
                 
                 </ul>
