--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ $(function () {
 
                 <div class="modal-body">
                      <center> <ul class="unstyled list-unstyled">
-                <li><span class="icon-font-grey-size36"><i class="fa fa-calculator fa-4"></i></span><small><p>Loan Eligibility Calculator</p></small></li>
+                <li><a href="calcfresh.html"><span class="icon-font-grey-size36"><i class="fa fa-calculator fa-4"></i></span><small><p>Loan Eligibility Calculator</p></small></a></li>
                 <li><a href="calcfresh.html" <i class="sd-icon sd-icon-like-outline color-grey"></i></a>
                 </li>
                 
