--- a/calcfresh.html
+++ b/calcfresh.html
@@ -467,7 +467,8 @@ $(".car-hover").hover(
             </div>
 
     
-        <input type="button" onclick="return eValidate()" class="btn btn-success waves-effect w-md waves-light m-b-5 " value="Calculate" id="calculate" style=" margin: 20px;float: right;padding:10px    background-color: #0EAAA6;">
+        <input type="button" onclick="return eValidate()" class="btn btn-success waves-effect w-md waves-light m-b-5 " value="Calculate" id="calculate" style=" margin-top:20px;padding:10px    background-color: #0EAAA6;
+">
     
     </form>
     </div>
