--- a/hometax_save.html
+++ b/hometax_save.html
@@ -455,7 +455,7 @@ $(".car-hover").hover(
             </div>
             <div class="form-group"><label for="interest-rate">Marginal Tax Rate</label>
                 <div class="input-group" >
-                    <input name="TaxSaving1$txt_tax" type="text" value="35.1" maxlength="5" id="TaxSaving1_txt_tax" class="form-control" onChange="check_taxsave(this,&#39;int&#39;);"/><span class="input-group-addon" style="background-color: #01B2E7;">&#37;<span/>
+                    <input name="TaxSaving1$txt_tax" type="text" value="35.1" maxlength="5" id="TaxSaving1_txt_tax" class="form-control" onChange="check_taxsave(this,&#39;int&#39;);"/><span class="input-group-addon" style="background-color: #F3F3F3;">&#37;<span/>
                     </span>    
                 </div>
             </div>
