--- a/hometax_save.html
+++ b/hometax_save.html
@@ -453,7 +453,7 @@ $(".car-hover").hover(
                 </select>
 
             </div>
-            <div class="form-group"><label for="interest-rate">Select Income Slab</label>
+            <div class="form-group"><label for="interest-rate">Select Taxable Income Slab</label>
                 <div class="input-group" >
                     <select name="reset" id="sel4" class="form-control">
                         <option value="10.30">2.5 - 5.0 Lakh</option>
