--- a/hometax_save.html
+++ b/hometax_save.html
@@ -446,13 +446,13 @@ $(".car-hover").hover(
             <div class="form-group"><label for="interest-rate">Rate of interest</label>
                 <input name="TaxSaving1$txt_roi" type="text" value="13" maxlength="5" id="TaxSaving1_txt_roi" class="form-control" onChange="check_taxsave(this,&#39;int&#39;);" />
             </div>
-            <div class="form-group"><label for="sel3">Rest</label>
+            <!-- <div class="form-group"><label for="sel3">Rest</label>
                 <select name="reset" id="sel3" class="form-control">
                     <option value="12">Yearly</option>
                     <option value="1" selected="true">Monthly</option>
-                </select>
+                </select> 
 
-            </div>
+            </div>-->
             <div class="form-group"><label for="interest-rate">Select Taxable Income Slab</label>
                 <div class="input-group" >
                     <select name="reset" id="sel4" class="form-control">
