--- a/hometax_save.html
+++ b/hometax_save.html
@@ -501,9 +501,9 @@ $(".car-hover").hover(
                             </center>
                                 <canvas id="income" width="400" height="400" style="float:initial;"></canvas>
                                 <div id="info" style="display:none; margin-top:5px;">
-                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box;">Tax Paid Without Home Loan&nbsp;: &nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="twthl" ></span></div>
-                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box;">Tax Paid with Home Loan&nbsp;:&nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="twhl" ></span></div>
-                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box;">Total Tax Saved&nbsp;:&nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="tts"></span></div>
+                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box; font-weight:900;">Tax Paid Without Home Loan&nbsp;: &nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="twthl" ></span></div>
+                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box; font-weight:900;">Tax Paid with Home Loan&nbsp;:&nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="twhl" ></span></div>
+                                    <div style="background-color: gainsboro;"><h5 style="display: -webkit-inline-box; font-weight:900;">Total Tax Saved&nbsp;:&nbsp;</h5><img src="images/rupee-icon-black.png" class="lazy" alt="Rupee image"/><span id="tts"></span></div>
                                 </div>
                                     
                                 <div id = "tb1" style="width:100% display:none;"></div>
