--- a/hometax_save.html
+++ b/hometax_save.html
@@ -495,7 +495,7 @@ $(".car-hover").hover(
                             <svg id="svg" style="font-size:15px"></svg>-->
 
                             <p style="display:block; background-color:grey; color:#fff; padding:2px;">
-                                <label class="radio-inline"><input type="radio" id ="sg" name="optradio"  value="1" >Total Saving Graph</label>
+                                <label class="radio-inline"><input type="radio" id ="sg" name="optradio"  value="1" checked="checked" >Total Saving Graph</label>
                                 <label class="radio-inline"><input type="radio" id ="st" name="optradio"  value="2">Yearly Saving Table</label>
                             </p>
                             </center>
