--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <a class="nav-link smoth-scroll" href="service.html">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="pricing.html">Pricing</a>
+          <a class="nav-link smoth-scroll" href="pricing.html">Foobar</a>
         </li>
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="blog.html">Blog</a>
