--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Interior Design HTML-5 Template </title>
+    <title>Sameer Interior Design HTML-5 Template </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -43,6 +43,7 @@
                 <div class="menu-wrapper d-flex align-items-center justify-content-between">
                     <!-- Logo -->
                     <div class="logo">
+                        <a href="#" style="font-size: 40px; font-weight: bold;">Sameer </a>
                         <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                     </div>
                     <!-- Main-menu -->
